--- a/Untitled-3.css
+++ b/Untitled-3.css
@@ -19,7 +19,126 @@ header img{
 .idList{
 	width: 100%;
 display: flex;
+letter-spacing: -0.4em;@charset "UTF-8";
+/* CSS Document */
+
+body{
+	background:#C1C0C0;
+	min-width: 1024px;
+	font-family:"didact-gothic";
+}
+
+.head1 img{
+	width: 100vw;
+	margin-bottom: 50px;	
+}
+
+.head2 {
+background-color:black;
+width:100%;
+height:auto;
+position:fixed;
+opacity: 0.75;
+}
+
+.header{
+	font-size: 20px;
+	color: white;
+  	display: flex;
+  	flex-direction: row;
+  	flex-wrap: wrap;
+	justify-content: space-around;
+	text-decoration: none;
+}
+
+.body{
+	margin-bottom: 10px;
+}
+.body1{
+	margin-bottom: 10px;
+}
+.idList{
+	width: 100%;
+display: flex;
 letter-spacing: -0.4em;
+word-spacing: -1em;
+font-size: 0;
+	flex-wrap:wrap;
+}
+.r2nd{
+	width: 736px;
+	flex-wrap:wrap;
+}
+h2{
+	padding: 4px 0 4px 10px;
+border-left: #FF8D3A 7px solid;
+line-height: 1.6;
+margin: 45px 0 15px 0;
+font-size: 20px;
+}
+.kindof{
+	font-size: 16px;
+text-align: left;
+padding: 8px;
+margin: 30px auto 15px auto;
+color: #FFF;
+background: #FF8D3A;
+line-height: 1.3;
+}
+.r3nd{
+	background-color: #fff;
+border: 1px solid #bebebe;
+padding: 6px;
+display: table;
+text-decoration: none;
+}
+figure{
+	display: table-cell;
+width: 10px;
+text-align: left;
+}
+.a img{
+	width: 150px;
+height: auto;
+}
+.b img{
+	width: 150px;
+height: auto;
+}
+
+.profileText{
+	display: table-cell;
+width: 134px;
+height: auto;
+vertical-align: bottom;
+position: relative;
+}
+.Jname{
+	font-size: 20px;
+	padding: 8px 0 25px 25px;
+}
+.Ename{
+	font-size: 11px;
+	font-family: 'Roboto Condensed', sans-serif;
+	border-bottom: 1px solid #bebebe;
+	text-align: center;
+}
+.a{
+	list-style: none;
+	margin-left: 10px;
+}
+.b{
+	list-style: none;
+	margin-left: 10px;
+	margin-bottom: 20px;
+}
+.group{
+	margim-right: 50px;
+	margin-left: 50px;
+}
+.kind{
+	margin-bottom: 3px;
+}
 word-spacing: -1em;
 font-size: 0;
 	flex-wrap:wrap;
