--- a/Untitled-3.css
+++ b/Untitled-3.css
@@ -2,7 +2,6 @@
 /* CSS Document */
 
 body{
-	background:#C1C0C0;
 	min-width: 1024px;
 	font-family:"didact-gothic";
 	font-size: 20px;
@@ -52,19 +51,19 @@ font-size: 0;
 	flex-wrap:wrap;
 }
 h2{
-	padding: 4px 0 4px 10px;
-border-left: #FF8D3A 7px solid;
+padding: 4px 0 4px 10px;
+border-left: #5ed746 7px solid;
 line-height: 1.6;
 margin: 45px 0 15px 0;
 font-size: 30px;
 }
 .kindof{
-	font-size: 19px;
+font-size: 30px;
 text-align: left;
 padding: 8px;
-margin: 30px auto 15px auto;
+margin: 60px auto 15px auto;
 color: #FFF;
-background: #FF8D3A;
+background: #87D4D8;
 line-height: 1.3;
 }
 .r3nd{
@@ -89,8 +88,8 @@ height: auto;
 }
 
 .profileText{
-	display: table-cell;
-width: 200px;
+display: table-cell;
+width: 190px;
 height: auto;
 vertical-align: bottom;
 position: relative;
@@ -121,4 +120,10 @@ position: relative;
 }
 .kind{
 	margin-bottom: 3px;
+}
+.line{
+text-align: left;
+padding: 8px;
+margin: 30px auto 15px auto;
+border-bottom: solid 2px #2119b7;
 }
