--- a/Untitled-3.css
+++ b/Untitled-3.css
@@ -3,7 +3,7 @@
 
 body{
 	min-width: 1024px;
-	font-family:"Hiragino Kaku Gothic ProN","serif","sans-serif";
+	font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", Myriad Pro, Myriad, Arial, sans-serif;
 	font-size: 23px;
 }
 
